# sthin

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-7f99d744dc4a21493ebca1a75d3decb6d5b673fe79a2ef420eb9ea17fe6d623e.json
configs/: base.yaml
init-scripts/: 01-init_db.sql
migrations/: 20250327142658_url_table.sql  20250327165243_url_table.down.sql  20250327165243_url_table.up.sql  20250407102451_url-stats.down.sql  20250407102451_url-stats.up.sql  20250407102451_url_stats.up.sql  20250625113703_url_stats_logs.down.sql  20250625113703_url_stats_logs.up.sql
src/: cargo-watch-setup.md  configs.rs  error.rs  error_handling.md  lib.rs  main.rs  startup.rs
src/application/: mod.rs
src/application/commands/: create_url_command.rs  mod.rs
src/application/dtos/: create_url_dto.rs  mod.rs  url_response.rs
src/configuration/: config.rs  env.rs  mod.rs
src/domain/: errors.rs  mod.rs
src/domain/models/: url.rs
src/domain/repositories/: mod.rs  url_repository.rs
src/domain/services/: mod.rs  url_service.rs
src/domain/value_objects/: mod.rs  short_code.rs  valid_url.rs
src/features/: mod.rs
src/features/url_stats/: error.rs  mod.rs
src/features/url_stats/entity/: mod.rs  url_stats_entity.rs  url_stats_log_entity.rs  url_stats_report_entity.rs
src/features/url_stats/model/: db_url_access.rs  mod.rs  url_stats_logs_model.rs  url_stats_model.rs  url_stats_report_model.rs
src/features/url_stats/queue/: mod.rs  stats_processor.rs
src/features/url_stats/repository/: mod.rs  url_stats_repository.rs
src/features/url_stats/service/: url_stats_repository.rs
src/features/urls/: errors.rs  mod.rs  routes.rs
src/features/urls/dtos/: create_url_dto.rs  mod.rs  update_url_dto.rs  url_params_dto.rs  url_response.rs
src/features/urls/entities/: db_url.rs  mod.rs  url_entity.rs
src/features/urls/handlers/: healthz_handler.rs  mod.rs  url_handler.rs
src/features/urls/models/: url.rs
src/features/urls/repository/: mod.rs  url_repository.rs  url_repository_trait.rs
src/features/urls/service/: url_service.rs
src/features/urls/value_objects/: mod.rs  short_code.rs  valid_url.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: error.rs  mod.rs  rate_limiter_cache.rs  redis_cache.rs
src/infrastructure/database/: connection.rs  mod.rs
src/infrastructure/database/models/: db_url.rs  db_url_access.rs  mod.rs
src/infrastructure/database/repositories/: mod.rs  pg_url_access_repository.rs  pg_url_repository.rs  url_repository.rs
src/infrastructure/http/: response.rs
src/infrastructure/securtity/: rate_limiter.rs
src/infrastructure/server/: mod.rs  response.rs  routes.rs  startup.rs
src/infrastructure/telemetry/: metrics.rs  mod.rs  telemetry.rs
src/interfaces/http/: mod.rs  routes.rs
src/routes/: health.rs  mod.rs
src/shared/: api_response.rs
(+2 files in other folders)
