[package]
name = "sthin"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "sthin-runner"
path = "src/main.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0"
config = "0.15"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = [
    "macros",
    "rt-multi-thread",
    "rt",
]}
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
