[package]
name = "sthin"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "sthin-runner"
path = "src/main.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0"
config = "0.15"
tokio = {version = "1", features = [
    "macros",
    "rt-multi-thread",
    "rt",
]}

serde = {version = "1", features = ["derive"]}
serde-aux = "4.6.0"
serde_json = "1.0.140"

tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }
redis = { version = "0.29", features = ["tokio-comp"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
url = "2.5.4"
async-trait = "0.1.88"
base64 = "0.22.1"
rand = "0.9.0"
validator = {version = "0.20.0", features = ["derive"]}
redact = {version = "0.1.10", features = ["serde"]}
prometheus = "0.13.4"
