[package]
name = "sthin"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "sthin-runner"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
config = "0.15"

serde = { version = "1", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"

tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "uuid",
] }
redis = { version = "0.32", features = ["tokio-comp"] }

chrono = { version = "0.4", features = ["serde"] }
redact = { version = "0.1.10", features = ["serde"] }

thiserror = "2.0"
anyhow = "1.0"

url = "2.5.4"
base64 = "0.22.1"
rand = "0.9"
validator = { version = "0.20.0", features = ["derive"] }
prometheus = "0.14"
lazy_static = "1.5.0"
regex = "1.11.1"
